--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -39,6 +39,7 @@
                     <div class="card-content center-align cardPlayer">
                         <span class="card-title"><a href="#/private/viewPlayer/{{player._id}}" class="title white-text">{{player.firstname}} {{player.name}}</a></span>
                         <a href="#/private/viewPlayer/{{player._id}}"><avatar person="player" width="'120px'" ></avatar></a>
+                        <span class="card-title white-text"> #{{player.status.squadnumber}}</span>
                     </div>
                     <div class="card-content center-align">
                         <span class="card-title"><a href="#/private/viewPlayer/{{player._id}}" class="title">{{player.positionType}}</a></span>
