--- a/src/app/modules/commons/users/config/mainConfig.html
+++ b/src/app/modules/commons/users/config/mainConfig.html
@@ -24,28 +24,8 @@
     </div>
     
     <div class="row">
-        <div class="col s12">
-            <ul class="tabs" tabs>
-                <li class="tab col s2 disabled"><a href="#sharing">{{'profile.tabs.sharing' | translate }}</a></li>
-                <li class="tab col s2 disabled"><a href="#notification">{{'profile.tabs.notification' | translate }}</a></li>
-                <li class="tab col s2"><a href="#settings">{{'profile.tabs.settings' | translate }}</a></li>
-            </ul>
+        <div class="col s12 card">
+            TODO
         </div>
-    
-        <!-- sharing -->
-        <div id="sharing"  class="col s12">
-            
-        </div>
-        
-        <!-- Notification -->
-        <div id="notification"  class="col s12">
-            
-        </div>
-        
-        <!-- settings -->
-        <div id="settings"  class="col s12">
-            
-        </div>
-        
     </div>
 </div>
