--- a/src/app/components/directives/stats/hand/goals.html
+++ b/src/app/components/directives/stats/hand/goals.html
@@ -1,5 +1,5 @@
-<div class="card light-green darken-1 white-text" ng-if="bindToId==='goalScored'">
-    <div class="card-title center">
+<div class="card white-text" ng-if="bindToId==='goalScored'">
+    <div class="card-title cardStatTitle center">
         <span class="white-text title"><small>{{'stats.resumeTab.goalScored' | translate }}</small></span>
     </div>
     <!-- 
