--- a/src/app/components/directives/stats/hand/actionsPosNeg.html
+++ b/src/app/components/directives/stats/hand/actionsPosNeg.html
@@ -1,30 +1,30 @@
 
 <div class="col l6 s12">
-    <div class="card blue-grey darken-2">
-        <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
-            <h5><small>{{'stats.actionTab.defense' | translate }}</small></h5>
+    <div class="card white">
+        <div class="card-title cardStatTitle center">
+            <span class="white-text title"><small>{{'stats.actionTab.defense' | translate }}</small></span>
         </div>
-        <div class="card-content grey lighten-4" ng-show="noStat">
+        <div class="card-content" ng-show="noStat">
             <c3chart bindto-id="chartActionsDef" chart-columns="defenseCol" chart-data="defenseData" 
                      padding-top="40" padding-bottom="40" padding-right="40" padding-left="40">
                 <chart-donut width="40"/>
             </c3chart>
         </div>
-        <div class="card-content grey lighten-4 center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
+        <div class="card-content center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
     </div>
 </div>
 
 <div class="col l6 s12">
-    <div class="card blue-grey darken-2">
-        <div class="card-title grey-text text-lighten-4 center">
-            <h5><small>{{'stats.actionTab.attack' | translate }}</small></h5>
+    <div class="card white">
+        <div class="card-title cardStatTitle center">
+            <span class="white-text title"><small>{{'stats.actionTab.attack' | translate }}</small></span>
         </div>
-        <div class="card-content grey lighten-4" ng-show="noStat">
+        <div class="card-content" ng-show="noStat">
             <c3chart bindto-id="chartActionsAtt" chart-columns="attackCol" chart-data="attackData" 
                      padding-top="40" padding-bottom="40" padding-right="40" padding-left="40">
                 <chart-donut width="40"/>
             </c3chart>
         </div>
-        <div class="card-content grey lighten-4 center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
+        <div class="card-content center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
     </div>
 </div>  
