--- a/src/app/components/directives/stats/hand/efficiency.html
+++ b/src/app/components/directives/stats/hand/efficiency.html
@@ -1,7 +1,7 @@
 <!-- efficiency gauge -->
-<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiencyGlobal'">
-    <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
-        <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
+<div class="card white" ng-if="bindToId==='gaugeEfficiencyGlobal'">
+    <div class="card-title cardStatTitle center">
+            <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
     <div class="card-content white center-align" ng-show="noStat">
@@ -19,8 +19,8 @@
 </div>
 
 <div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency9m'">
-    <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
-        <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
+    <div class="card-title cardStatTitle center">
+            <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
     <div class="card-content white center-align" ng-show="noStat">
@@ -38,8 +38,8 @@
 </div>
 
 <div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency6m'">
-    <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
-        <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
+    <div class="card-title cardStatTitle center">
+            <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
     <div class="card-content white center-align" ng-show="noStat">
@@ -57,8 +57,8 @@
 </div>
 
 <div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency7m'">
-    <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
-        <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
+    <div class="card-title cardStatTitle center">
+            <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
     <div class="card-content white center-align" ng-show="noStat">
