--- a/src/app/index.css
+++ b/src/app/index.css
@@ -22,18 +22,24 @@
     font-size: 48px;
 }
 
+.blue-grey.darken-2 {
+  background: linear-gradient(10deg, rgba(60, 70, 65, 1), rgba(60,63,65, 1)); }
+
+.blue-grey-text.text-darken-2 {
+  color: #3c3f41 !important; }
+
 .cardStat {
-    background: linear-gradient(10deg, rgba(53, 184, 136, 0.1), rgba(0, 113, 178, 1));
+    background: linear-gradient(10deg, rgba(53, 184, 136, 0.1), rgba(245,245,245, 1));
     overflow: hidden;
 }
 
 .cardStatTitle {
-    background: linear-gradient(10deg, rgba(30, 100, 136, 1), rgba(69, 90, 100, 1));
+    background: linear-gradient(10deg, rgba(60, 70, 65, 1), rgba(60,63,65, 1));
     overflow: hidden;
 }
 
 .cardPlayer {
-    background: linear-gradient(10deg, rgba(30, 100, 136, 1), rgba(69, 90, 100, 1));
+    background: linear-gradient(10deg, rgba(60, 70, 65, 1), rgba(60,63,65, 1));
     overflow: hidden;
 }
 
