Correction bug utilisation Joueur

--- a/src/app/components/directives/stats/hand/goals.html
+++ b/src/app/components/directives/stats/hand/goals.html
@@ -20,8 +20,8 @@
     </div>
 </div>
 
-<div class="card red lighten-1 white-text" ng-if="bindToId==='goalConceded'">
-    <div class="card-title center">
+<div class="card white-text" ng-if="bindToId==='goalConceded'">
+    <div class="card-title cardStatTitle center">
         <span class="white-text title"><small>{{'stats.resumeTab.goalConceded' | translate }}</small></span>
     </div>
     <!--
