--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -3,7 +3,7 @@
     <div class="row"></div>   
     
     <!-- entete start -->
-    <div class="row blue-grey darken-2">
+    <div class="row moduleTitle">
         <div class="col s2 white-text center-align">
             <i class="material-icons md-48">person</i>
         </div>
