--- a/src/app/modules/sandbox/effective/team/writeTeam.html
+++ b/src/app/modules/sandbox/effective/team/writeTeam.html
@@ -5,7 +5,7 @@
     <!-- Entete -->
     <div class="row">
         <div class="col s12">
-            <div class="row blue-grey darken-2 white-text center-align">
+            <div class="row moduleTitle white-text center-align">
                 <div ng-hide="addTeamTitle">
                     <div class="col s1">    
                         <h5><i class="fa fa-pencil-square-o"></i></h5>
@@ -62,7 +62,8 @@
                 </div>
             </div>
             
-            <div class="card-panel" ng-if="adversary==='false'">
+            <!-- Hidden for moment-->
+            <div class="card-panel" ng-if="adversary==='HIDDEN-HIDDEN'">
                 <div class="row">
                     <!-- List team adversary -->
                     <div class="col s11 grey lighten-4 blue-grey-text text-darken-2">
