--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -5,7 +5,7 @@
     <!-- entete -->
      <div class="row">
         <div class="col s12"> 
-            <div class="row blue-grey darken-2">
+            <div class="row moduleTitle">
                 <div class="col m1 hide-on-small-only center-align white-text">
                     <br><i class="fa fa-calendar fa-2x"></i>
                     
