--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -5,7 +5,7 @@
     <!-- Entete -->
     <div class="row">
         <div class="col s12">
-            <div class="row blue-grey darken-2 white-text center">
+            <div class="row moduleTitle white-text center">
                 <div class="col m3 s12 center">
                     <avatar person="player" width="'100px'"></avatar>
                 </div>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 
-                <div class="row blue-grey darken-2">
+                <div class="row moduleTitle">
                     <div class="col s4 center-align">
                         <a href="" ng-click="doTheBack()">
                             <i class="white-text material-icons small tooltipped"  
