--- a/src/app/modules/sandbox/effective/players/writePlayer.html
+++ b/src/app/modules/sandbox/effective/players/writePlayer.html
@@ -6,7 +6,7 @@
     <!-- Entete -->
     <div class="row">
         <div class="col s12">
-            <div class="row blue-grey darken-2 white-text center">
+            <div class="row moduleTitle white-text center">
                 <div class="col m3 s12 center">
                     <avatar person="player" width="'100px'"></avatar>
                     <span class="small">{{'effectiveLabels.effectiveAvatar' | translate }}</span>
