--- a/src/app/modules/sandbox/stats/team/teamStats.html
+++ b/src/app/modules/sandbox/stats/team/teamStats.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col s12">
             
-            <div class="row blue-grey darken-2">
+            <div class="row moduleTitle">
                 <div class="col l2 m1 white-text center hide-on-small-only">
                     &nbsp;
                 </div>
@@ -18,7 +18,7 @@
                 </div>
                 <div class="col l2 m1 s12 white-text center-align">
                     <h5>
-                    <a href="" class="blue-grey darken-2 white-text waves-effect waves-light" ng-click="doTheBack()">
+                    <a href="" class="white-text waves-effect waves-light" ng-click="doTheBack()">
                         <i class="fa fa-arrow-left"></i>   
                     </a>
                     </h5>
@@ -47,14 +47,12 @@
                 </div>
             </div>
             <!-- Stats goals/sanction/use end -->
-           
-            <div class="row"></div>
+
             
             <!-- Stats shoot efficiency Start -->
             <div class="row">
-                <div class="col s12 center white red-text text-lighten-2">
-                    <br/>
-                    <h5 style="padding-left:10px">{{'stats.efficiency.efficiency' | translate }}</h5>
+                <div class="col s12 left-align grey-text text-ligthen-4">
+                    <h5><small>{{'stats.efficiency.efficiency' | translate }}</small></h5>
                 </div>
                 
                 <div class="col l3 m6 s12">
@@ -84,9 +82,9 @@
             <!-- Stats shoot efficiency end -->
             
             <!-- Stats actions pos/neg Start -->
-            <div class="row">
-                <div class="col s12 center white red-text text-lighten-2">
-                    <h5>{{'stats.actionTab.title' | translate }}</h5>
+            <div class="row"> 
+                <div class="col s12 left-align grey-text text-ligthen-4">
+                    <h5><small>{{'stats.actionTab.title' | translate }}</small></h5>
                 </div>
                 <stats-actions-pos-neg></stats-actions-pos-neg>
             </div>
@@ -94,13 +92,14 @@
             
             <!-- Stats event's list Start -->
             <div class="row">
-                <div class="col s12" ng-if="collectes.length > 0">
-                    <div><h5 class="center white red-text text-lighten-2"><i class="fa fa-bar-chart"></i> {{'stats.teamLabels.listCollect' | translate }}</h5></div>
-                    <ul>
-                        <li class="col s12 m6 l4" ng-repeat="collecte in collectes">
-                            <event-card event="collecte.eventRef"></event-card>
-                        </li>
-                    </ul>
+                <div class="col s12 left-align grey-text text-ligthen-4" ng-if="collectes.length > 0">
+                    <h5><small>{{'stats.teamLabels.listCollect' | translate }}</small></h5>
+                </div>
+                <ul>
+                    <li class="col s12 m6 l4" ng-repeat="collecte in collectes">
+                        <event-card event="collecte.eventRef"></event-card>
+                    </li>
+                </ul>
                 </div>
             </div>
             <!-- Stats event's list Start -->
