--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -60,7 +60,7 @@
 
 <!-- Menu Connected First header-->
 <div class="navbar-fixed" ng-if="user && !user.account.firstConnexion">
-    <nav class="top-nav light-green lighten-1 visible-nav" role="navigation">
+    <nav class="top-nav menuBgColor visible-nav" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
                 <!-- Desktop and tablet-->
