--- a/src/app/components/directives/agenda/eventCard.html
+++ b/src/app/components/directives/agenda/eventCard.html
@@ -12,13 +12,12 @@
             </span>
         </h5>
 
-        <h6 class="card-content">{{event.participants.teamHome.label}} <br/> {{event.participants.teamVisitor.label}}</h6>
-        <h6 class="card-content">
-            {{event.startDate}}
+        <div class="card-content">&nbsp; {{event.participants.teamHome.label}} <br/> &nbsp; {{event.participants.teamVisitor.label}}</div>
+        <div class="card-content">{{event.startDate}}
             <a ng-show="mapShow" class="waves-effect waves-light {{textColor1}} right" ng-click="openMap()">
                 <i class="material-icons">location_on</i>
             </a>
-        </h6>
+        </div>
     </div>
 </div>
 
