--- a/src/app/modules/sandbox/stats/player/playerStats.html
+++ b/src/app/modules/sandbox/stats/player/playerStats.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col l2 m2 s12 white-text center">
                     <h5>
-                    <a href="" class="blue-grey darken-2 white-text waves-effect waves-light" ng-click="doTheBack()">
+                    <a href="" class="white-text waves-effect waves-light" ng-click="doTheBack()">
                         <i class="fa fa-arrow-left"></i>   
                     </a>
                     </h5>
@@ -60,7 +60,7 @@
             
             <!-- Stats shoot efficiency Start -->
             <div class="row">
-                <div class="col s12 left-align grey-text text-ligthen-4">
+                <div class="col s12 left-align grey-text text-ligthen-2">
                     <h5><small>{{'stats.efficiency.efficiency' | translate }}</small></h5>
                 </div>
                 
@@ -92,7 +92,7 @@
             
             <!-- Stats actions pos/neg Start -->
             <div class="row"> 
-                <div class="col s12 left-align grey-text text-ligthen-4">
+                <div class="col s12 left-align grey-text text-ligthen-2">
                     <h5><small>{{'stats.actionTab.title' | translate }}</small></h5>
                 </div>
                 <stats-actions-pos-neg></stats-actions-pos-neg>
@@ -101,7 +101,7 @@
             
             <!-- Stats event's list Start -->
             <div class="row">
-                <div class="col s12 left-align grey-text text-ligthen-4" ng-if="collectes.length > 0">
+                <div class="col s12 left-align grey-text text-ligthen-2" ng-if="collectes.length > 0">
                     <h5><small>{{'stats.teamLabels.listCollect' | translate }}</small></h5>
                 </div>
                 <ul>
