--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -4,12 +4,12 @@
     
     <!-- entete start tablet and sup-->
     <div class="row white hide-on-small-only">
-        <div class="col s1 grey-text text-lighten-1 left-align">
+        <div class="col s1 blue-grey-text text-darken-2 left-align">
             <i class="material-icons md-48">group</i>
         </div>
 
         <div class="col s10 left-align">
-            <h5 class="grey-text text-lighten-1">{{'mainTeam.title' | translate }} {{currentEffective.label}}</h5>
+            <h5 class="blue-grey-text text-darken-2">{{'mainTeam.title' | translate }} {{currentEffective.label}}</h5>
         </div>
         
         <div class="col s1 center-align">
@@ -24,7 +24,7 @@
     <div class="row white hide-on-med-and-up">
 
         <div class="col s12 left-align">
-            <h5 class="grey-text text-lighten-1">{{'mainTeam.title' | translate }} {{currentEffective.label}}</h5>
+            <h5 class="blue-grey-text text-darken-2">{{'mainTeam.title' | translate }} {{currentEffective.label}}</h5>
         </div>
         
         <div class="col s12 center-align">
