--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -53,7 +53,7 @@
         
         <!-- List player -->    
         <ul>
-            <li class="col l4 m6 s12" ng-repeat="player in players | filter:queryPlayer">
+            <li class="col l4 m6 s12" ng-repeat="player in players track by $index | filter:queryPlayer">
                 <div class="card white blue-grey-text text-darken-2">
                     <div class="card-content center-align cardPlayer">
                         <span class="card-title"><a href="#/private/viewPlayer/{{player._id}}" class="white-text">{{player.firstname}} {{player.name}}</a></span>
