--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -9,7 +9,7 @@
         </div>
         <!-- effective list -->
         <ul id="mainEffectiveList" class="dropdown-content">
-            <li ng-repeat="effective in effectives">
+            <li ng-repeat="effective in effectives track by $index">
                 <a href="#/private/effective/{{effective._id}}"><h6 class="blue-grey-text text-darken-2">{{effective.label}} - {{effective.categoryAge.label}}</h6></a>
                 <div class="divider"></div>
             </li>
@@ -66,7 +66,7 @@
             </div>
             <div class="col s12">    
                 <ul class="collection">
-                    <li class="collection-item avatar col s12" ng-repeat="player in players | filter:queryPlayer">
+                    <li class="collection-item avatar col s12" ng-repeat="player in players track by $index | filter:queryPlayer">
                         <simple-avatar person="player" link="('#/private/viewPlayer/' + player._id)"></simple-avatar>
                         <a href="#/private/viewPlayer/{{player._id}}" class="title red-text text-lighten-1">{{player.firstname}} {{player.name}}</a> 
                         <span class="title  hide-on-small-only">{{player.positionType}}</span>
